--- a/PaymentService/src/main/resources/application.yml
+++ b/PaymentService/src/main/resources/application.yml
@@ -10,7 +10,12 @@ spring:
 
 
 server:
-  port: 8082
+  port: 8084
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
 vnpay:
   tnnCode: ${VNPAY_TNNCODE}
