update feature in management, report service

--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
         - id: management-service
           uri: http://localhost:8083
           predicates:
-            - Path=/management/**
+            - Path=/manage/**
           filters:
             - AuthenticationFilter
 
