--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -45,6 +45,6 @@ spring:
         - id: reporting-service
           uri: http://localhost:8085
           predicates:
-            - Path=/reporting
+            - Path=/report/**
           filters:
             - AuthenticationFilter
