maintain, update all feature

--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -48,3 +48,8 @@ spring:
             - Path=/report/**
           filters:
             - AuthenticationFilter
+
+        - id: chatbot-service
+          uri: http://localhost:8086
+          predicates:
+            - Path=/ai/**
