--- a/PaymentService/src/main/resources/application.yml
+++ b/PaymentService/src/main/resources/application.yml
@@ -7,6 +7,14 @@ spring:
     #    hibernate.ddl-auto: update
     #    generate-ddl: true
     show-sql: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
 
 
 server:
